# WSHEEET

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  grammar.txt
include/: .def_concepts.hpp.swp  DebugLoc.hpp  Type.hpp  def_concepts.hpp  lexer.hpp  lexerdriver.hpp
include/AST/: Decl.hpp  Expr.hpp  Stmt.hpp  SymbolTable.hpp  Tree.hpp  TreeNode.hpp  Type.h  Type.hpp  TypeBuilder.h  TypeBuilder.hpp  ast.h  datum.h  token.h
include/visitor/: datum.h  detail.h  operations.h  token.h  visitor.h
lib/parser/: CMakeLists.txt  driver.cc  grammar.y  lexems.l  test.txt  test0.txt
module-experiments/: README.md
src/parser/: CMakeLists.txt  driver.cc  grammar.y  lexems.l  main.cc
test/: CMakeLists.txt  main.cc
test/AST/: CMakeLists.txt  TreeNode.cpp
test/lib/: CMakeLists.txt
test/lib/AST/: CMakeLists.txt  E2E.cpp  ast.cc  instantiation.cc  token.cc  token.cpp
test/lib/visitor/: .operations.h.swp  .visitor.cc.swp  CMakeLists.txt  operations.h  token.cc  visitor.cc
tests/: scope_statements.whs
